added styling for reaction buttons

--- a/templates/public/images.html
+++ b/templates/public/images.html
@@ -31,18 +31,22 @@
             <div class="image-reactions d-inline-flex">
 
                 {% if session %}
-                <p class="update-reaction p-2"><button id="thumbsup-{{loop.index}}" image-id="{{image._id}}"
-                        class="thumbsup-link reaction-link">👍</button>:
-                    <span id="thumbsup-num-{{loop.index}}">{{image.reactions.thumbsup}}</span></p>
-                <p class="update-reaction p-2"><button id="heart-{{loop.index}}" image-id="{{image._id}}" class=" heart-link
-                        reaction-link">😍</button>:
-                    <span id="heart-num-{{loop.index}}">{{image.reactions.heart}}</span></p>
-                <p class="update-reaction p-2"><button id="laugh-{{loop.index}}" image-id="{{image._id}}" class=" laugh-link
-                        reaction-link">😂</button>:
-                    <span id="laugh-num-{{loop.index}}">{{image.reactions.laugh}}</span></p>
-                <p class="update-reaction p-2"><button id="happy-{{loop.index}}" image-id="{{image._id}}" class=" happy-link
-                        reaction-link">😀</button>:
-                    <span id="happy-num-{{loop.index}}">{{image.reactions.happy}}</span></p>
+                <p class="update-reaction p-2">
+                    <button id="thumbsup-{{loop.index}}" image-id="{{image._id}}"
+                        class="thumbsup-link reaction-link {% if session['username'] in image.thumbsup_by %} selected {% endif %}">👍:
+                        <span id="thumbsup-num-{{loop.index}}">{{image.reactions.thumbsup}}</span></button></p>
+                <p class="update-reaction p-2">
+                    <button id="heart-{{loop.index}}" image-id="{{image._id}}" class=" heart-link
+                        reaction-link {% if session['username'] in image.heart_by %} selected {% endif %}">😍:
+                        <span id="heart-num-{{loop.index}}">{{image.reactions.heart}}</span></button></p>
+                <p class="update-reaction p-2">
+                    <button id="laugh-{{loop.index}}" image-id="{{image._id}}" class=" laugh-link
+                        reaction-link {% if session['username'] in image.laugh_by %} selected {% endif %}">😂:
+                        <span id="laugh-num-{{loop.index}}">{{image.reactions.laugh}}</span></button></p>
+                <p class="update-reaction p-2">
+                    <button id="happy-{{loop.index}}" image-id="{{image._id}}" class=" happy-link
+                        reaction-link {% if session['username'] in image.happy_by %} selected {% endif %}">😀:
+                        <span id="happy-num-{{loop.index}}">{{image.reactions.happy}}</span></button></p>
                 {% else %}
                 <p class="update-reaction">👍:
                     {{image.reactions.thumbsup}}</p>
