updated styling to titles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,6 +50,11 @@ body {
     margin: 0 0.8rem;
 }
 
+h2.page-title {
+    text-align: center;
+    margin: 2rem;
+}
+
 /* Banner Styling and Images */
 
 .banner-settings {
