--- a/templates/public/activities.html
+++ b/templates/public/activities.html
@@ -6,7 +6,7 @@
 
 <div class="row no-gutters text-center">
   <div class="col-12 p-3">
-    <h1>Add Activity</h1>
+    <h2 class="page-title">Choose An Activity</h2>
     <hr>
 
     {% with messages = get_flashed_messages() %}
@@ -77,4 +77,4 @@
 
 
 
-  {% endblock %}
+{% endblock %}
