--- a/templates/public/images.html
+++ b/templates/public/images.html
@@ -21,7 +21,7 @@
 <section class="container-fluid">
     <div class="row no-gutters">
         <div class="col-12">
-            <h3 class="front-header">Recently Added</h3>
+            <h2 class="page-title">Recently Added Photos</h2>
         </div>
         <div class="card-columns">
             {% for image in images %}
