--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,6 +80,7 @@ h2.page-title {
     right: -100%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    padding: 1.5rem;
 }
 
 .login-banner {
