changed alignment of last item on homepage

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -43,7 +43,7 @@
 <section>
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-2">
+            <div class="col-lg-6">
                 <div class="p-4">
                     <img class="img-fluid rounded-circle"
                         src="https://res.cloudinary.com/andy-osborne/image/upload/v1593867210/Hackathon/INdex/arts-and-crafts-child-close-up-color-159579_1_1_a6brnz.jpg"
