Update page banners

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -7,9 +7,9 @@
 <header class="home-banner banner-settings text-center text-white">
     <div class="banner-content">
         <div class="container">
-            <h1 class="masthead-heading mb-0">Let's Play</h1>
-            <h2 class="masthead-subheading mb-0">Be Creative and Have Fun!</h2>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+            <h1 class="mb-0">Let's Play</h1>
+            <h2 class="mb-0">Be Creative and Have Fun!</h2>
+            <a href="{{url_for('about')}}" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
         </div>
     </div>
 </header>
