--- a/templates/public/register.html
+++ b/templates/public/register.html
@@ -8,8 +8,7 @@
     <div class="banner-content">
         <div class="container-fluid">
             <h1 class="masthead-heading mb-0">Let's Play</h1>
-            <h2 class="masthead-subheading mb-0">Be Creative and Have Fun!</h2>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+            <h2 class="masthead-subheading mb-0">Your almost ready to start your list!</h2>
         </div>
     </div>
 </header>
