updates to style of about page

--- a/templates/public/about.html
+++ b/templates/public/about.html
@@ -1,4 +1,3 @@
-
 {% extends 'public/base.html' %}
 
 {% block title %}Let's Play{% endblock %}
@@ -18,21 +17,19 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Who we are</h2>
+<div class="container mb-5 text-center">
+    <h2 class="page-title">Who we are</h2>
     <p>We are a group of coders - Simon, Pasha, Andy, Daryl, Lety and Debbie</p>
     <p>We had this idea to create a website of activities for children aged 6 to 11</p>
-    <p>So here it is!  There are lots of activities for kids and parents! to do which</p>
-    <p>will keep you busy during this time.  You can also upload pictures of the</p>
+    <p>So here it is! There are lots of activities for kids and parents! to do which</p>
+    <p>will keep you busy during this time. You can also upload pictures of the</p>
     <p>activity and others can see how you got on</p>
     <br>
-    <p>A note for parents:  Maybe plan a schedule for the activities and stick it on</p>
-    <p>to the fridge.  Could be a great motivator for the kids!</p>
+    <p>A note for parents: Maybe plan a schedule for the activities and stick it on</p>
+    <p>to the fridge. Could be a great motivator for the kids!</p>
     <br>
     <p><strong> And please remember to stay a minimum of 1 metre from anyone else!</strong></p>
-    <br>
-    
-    <br>
-    <p>  
+</div>
 
 
 {% endblock %}
