--- a/templates/public/register.html
+++ b/templates/public/register.html
@@ -8,7 +8,7 @@
     <div class="banner-content">
         <div class="container-fluid">
             <h1 class="masthead-heading mb-0">Let's Play</h1>
-            <h2 class="masthead-subheading mb-0">Your almost ready to start your list!</h2>
+            <h2 class="masthead-subheading mb-0">You're almost ready to start your list!</h2>
         </div>
     </div>
 </header>
