Add banner to acitvity page and styling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,6 +95,10 @@ h2.page-title {
     background-image: url("https://res.cloudinary.com/andy-osborne/image/upload/v1594038361/Hackathon/INdex/mosaic-alien-on-wall-1670977_2_1_boqivg.jpg");
 }
 
+.activity-banner {
+    background-image: url("https://res.cloudinary.com/andy-osborne/image/upload/v1594285086/Hackathon/faceless-toddler-girl-sitting-on-bed-and-playing-with-wooden-3975599_1_vo3te9.jpg");
+}
+
 .uploads-banner {
     background-image: url("https://res.cloudinary.com/andy-osborne/image/upload/v1594210611/Hackathon/INdex/toddler-girl-wearing-white-and-black-sweater-holding-plastic-712141_1_1_ku8i1t.jpg");
 }
