--- a/templates/public/activities.html
+++ b/templates/public/activities.html
@@ -2,6 +2,19 @@
 
 {% block title %}Activities{% endblock %}
 
+{% block header %}
+
+<header class="activity-banner text-center text-white banner-settings">
+  <div class="banner-content">
+      <div class="container">
+          <h1 class="masthead-heading mb-0">Let's Play</h1>
+          <h2 class="masthead-subheading mb-0">Start your activities below!</h2>
+      </div>
+  </div>
+</header>
+
+{% endblock %}
+
 {% block content %}
 
 <div class="row no-gutters text-center">
