Fix opening sentence as we no longer show amount of registered users

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -30,8 +30,8 @@
             <div class="col-lg-6 order-lg-1">
                 <div class="p-3">
                     <h2 class="display-4">Challenge your creativity and friends</h2>
-                    <p>We have {{ n_of_users }} users who are bringing out their inner creativity and making cool
-                        things. Join them today
+                    <p>Bring out your inner creativity, make cool
+                        things and complete fun activities whilst bored in lockdown. Join today
                         and see what awesome things you can make!
                     </p>
                 </div>
